Feature: add coderepobinding api
